<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_top"
    tools:context="${packageName}.${activityClass}" >

    <RadioGroup
        android:id="@+id/rgSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSize"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="false"
        android:contentDescription="@string/image_size"
        android:gravity="left"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbSizeAny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag=""
            android:text="@string/radio_any" />

        <RadioButton
            android:id="@+id/rbSizeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:tag="icon"
            android:text="@string/radio_Icon" />

        <RadioButton
            android:id="@+id/rbSizeMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:tag="medium"
            android:text="@string/radio_Medium" />

        <RadioButton
            android:id="@+id/rbSizeLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="xxlarge"
            android:text="@string/radio_large" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/image_size" />

    <Button
        android:id="@+id/btnSetFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onSubmit"
        android:text="@string/set_filters" />

    <RadioGroup
        android:id="@+id/rgType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvType"
        android:contentDescription="@string/image_size"
        android:gravity="left"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rbTypeAny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag=""
            android:text="@string/radio_any" />

        <RadioButton
            android:id="@+id/rbTypeFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:tag="face"
            android:text="@string/radio_face" />

        <RadioButton
            android:id="@+id/rbTypePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:tag="photo"
            android:text="@string/radio_photo" />

        <RadioButton
            android:id="@+id/rbTypeClipart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="clipart"
            android:text="@string/radio_clipart" />

        <RadioButton
            android:id="@+id/rbTypeLineart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="lineart"
            android:text="@string/radio_lineart" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/rgSize"
        android:text="@string/image_type" />

    <TextView
        android:id="@+id/tvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rgType"
        android:text="@string/image_site" />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSite"
        android:ems="10"
        android:hint="@string/site_example" >

        <requestFocus />
    </EditText>

</RelativeLayout>